--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,5 +16,7 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
         
-- name: ESLint checks
-  uses: gimenete/eslint-action@1.0
+
+name: ESLint checks
+
+uses: gimenete/eslint-action@1.0
