--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,5 @@
-name: CI
+name: CI checks
+uses: gimenete/eslint-action@1.0
 
 on: [push]
 
@@ -15,6 +16,3 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        
-- name: ESLint checks
-  uses: gimenete/eslint-action@1.0
