--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,4 @@
-name: CI checks
-uses: gimenete/eslint-action@1.0
+name: CI
 
 on: [push]
 
@@ -16,3 +15,5 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+        
+uses: gimenete/eslint-action@1.0
