--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,5 +15,6 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        
-uses: gimenete/eslint-action@1.0
+    - name: ESLint checks
+      uses: gimenete/eslint-action@1.0   
+
